--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@ subdir('po')
 subdir('src')
 
 gnome.post_install(
-     glib_compile_schemas: true,
-    gtk_update_icon_cache: true,
+     glib_compile_schemas: false,
+    gtk_update_icon_cache: false,
   update_desktop_database: true,
 )
